<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="@dimen/padding_16"
    android:paddingHorizontal="@dimen/padding_8">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/filterContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/numberOfUsersLabel"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filterCountResult"
                    android:textSize="@dimen/filter_text_size"/>



            <SeekBar
                android:id="@+id/numberOfUsersSeekBar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:max="50"
                android:scaleY="1.5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filterGenderResult"
                    android:textSize="@dimen/filter_text_size"/>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:clickable="true"
                        android:text="@string/filterMaleRadioButton" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:clickable="true"
                        android:text="@string/filterFemaleRadioButton" />

                    <RadioButton
                        android:id="@+id/allRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:clickable="true"
                        android:text="@string/filterAllRadioButton" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/filterSeedTextView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/filter_text_size"
                android:text="@string/filterSeedLabel" />

            <EditText
                android:id="@+id/filterSeedEditText"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/filter_text_size"
                android:hint="@string/filterSeedPlaceholder"/>

        </LinearLayout>





    </LinearLayout>

    <Button
        android:id="@+id/filterSearchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="@dimen/padding_8"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/filterSearch"
        android:textSize="@dimen/filter_buttom_size" />
</FrameLayout>